--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,111 @@
-.App {
-  text-align: center;
+html {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.8)),url(https://calendarmedia.blob.core.windows.net/assets/4f7639cb-7c99-4bdd-befc-87dee2d6ae6b.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  height: 100%;
+  
+   
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header {
+  display: flex;
+  height: 70px;
+  justify-content: start;
+  gap: 15px;
+  align-items: center;
+  padding: 0px 80px;
+  background: #25aae1;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h{
+  font-family: 'Bungee Inline';
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+button {
+  height: 44px;
+  font-size: 22px;
+  padding: 0px 12px;
+  color: #25aae1;
+  background-color: transparent;
+  border: 2px solid #25aae1;
+  border-radius: 3px;
+  min-width: 125px;
+}
+
+.page {
+  width: calc(100vw - 520px);
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.btn-container {
+  margin-bottom: 15px;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  gap: 10px;
+}
+
+.movie-container {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+  justify-content: center;
+  
+}
+
+.movie-card {
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  justify-content: space-between;
+}
+
+.movie-card img {
+  width: 100%;
+  border: solid 2px;
+}
+
+main {
+  display: flex;
+  flex-direction: row;
+}
+
+.watchlist {
+  font-family: 'Bungee Inline';
+  width: 500px;
+  height: calc(100vh - 70px);
+  overflow-y: scroll;
+  position: fixed;
+  top: 70px;
+  right: 0;
+  text-align: center;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.box{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.page{
+  color: white;
+  font-family: 'Bungee Inline';
+}
+
+.h{
+  font-family: 'Bungee Inline';
+  text-align: center;
+}
+
+.hhh{
+  font-family: 'Azeret Mono', monospace;
 }
