--- a/src/App.css
+++ b/src/App.css
@@ -12,11 +12,13 @@ html {
 header {
   display: flex;
   height: 70px;
-  justify-content: start;
+  justify-content:start;
   gap: 15px;
   align-items: center;
-  padding: 0px 80px;
-  background: #25aae1;
+  padding: 0px 20px;
+  background:  rgba(17, 110, 197, 0.679);
+  font-family: 'Azeret Mono';
+  font-size: 9pt;
 }
 
 h{
@@ -64,6 +66,7 @@ button {
   align-items: center;
   text-align: center;
   justify-content: space-between;
+  
 }
 
 .movie-card img {
